--- a/GameRunner/GameRunner.csproj
+++ b/GameRunner/GameRunner.csproj
@@ -6,8 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-	</ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Bots\Bots.csproj" />
+    <ProjectReference Include="..\Game\Game.csproj" />
+  </ItemGroup>
 
 </Project>
