--- a/AgentsTest/AgentsTest.csproj
+++ b/AgentsTest/AgentsTest.csproj
@@ -33,7 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Bots\Bots.csproj" />
+    <ProjectReference Include="..\Agents\Agents.csproj" />
   </ItemGroup>
 
 </Project>
