--- a/GameRunner/GameRunner.csproj
+++ b/GameRunner/GameRunner.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Bots\Bots.csproj" />
+    <ProjectReference Include="..\Agents\Agents.csproj" />
     <ProjectReference Include="..\Game\Game.csproj" />
   </ItemGroup>
 
