get scripts to work with wsl to support tensorflow using gpu

--- a/GameServer/GameServer.csproj
+++ b/GameServer/GameServer.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
+    <UserSecretsId>0869d9ec-72b1-40e7-9ff6-df94ab4a3128</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
